welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:9: error: reassignment to val
			if(a = 2)
                             ^